--- a/2weeks/src/main/webapp/resources/css/covid/regionalKor.css
+++ b/2weeks/src/main/webapp/resources/css/covid/regionalKor.css
@@ -13,6 +13,15 @@
 	width: 100%;
 	min-height: 500px;
 }
+/* #regionalKor-map-1{ 50명 미만
+	fill: blue;
+}
+#regionalKor-map-2{ 50~100
+	fill: red;
+}
+#regionalKor-map-3{ 100 초과
+	fill: green;
+} */
 #states path {
 	fill: #EEF0FE; 
 	stroke: white;
