--- a/2weeks/src/main/webapp/resources/css/covid/regionalKor.css
+++ b/2weeks/src/main/webapp/resources/css/covid/regionalKor.css
@@ -13,25 +13,14 @@
 	width: 100%;
 	min-height: 500px;
 }
-/* #regionalKor-map-1{ 50명 미만
-	fill: blue;
-}
-#regionalKor-map-2{ 50~100
-	fill: red;
-}
-#regionalKor-map-3{ 100 초과
-	fill: green;
-} */
+
 #states path {
-	fill: #EEF0FE; 
+	/* fill: #EEF0FE;  */
 	stroke: white;
 	stroke-width: 1.px; 
 }
 
-#states path:hover {
-	fill: #E1E6FF;
-}
-
+/* 
 #states .active {
 	fill: #E1E6FF;
 }
@@ -39,10 +28,7 @@
 #states .activeDetail {
 	fill: #E1E6FF;
 }
-
-#states path {
-	cursor: pointer;
-}
+ */
 
 #states text {
 	cursor: pointer;
