--- a/2weeks/src/main/webapp/resources/css/covid/covidReportList.css
+++ b/2weeks/src/main/webapp/resources/css/covid/covidReportList.css
@@ -1,25 +1,25 @@
 @charset "UTF-8";
 
-p{
+/* #reportListCnt{
 	font-size: 13px;
 	margin-left: 10px;
 }
-span{
+#reportListCnt span{
 	color: red;
 }
 #reportTab{
 	font-size:13px;
 }
-table th{
+#reportTab th{
 	font-weight:bolder;
 	text-align: center;
 }
-table td{
+#reportTab td{
 	text-align: center;
 }
-td:nth-child(2){
+#reportTab td:nth-child(2){
 	text-align: left;
 }
 #reportPageBar{
 	text-align: center;
-}
+} */
