home 화면 지도 추가 -jin-

--- a/2weeks/src/main/webapp/resources/css/covid/regionalKor.css
+++ b/2weeks/src/main/webapp/resources/css/covid/regionalKor.css
@@ -52,6 +52,10 @@
 	width: 100%;
 	min-height: 500px;
 }
+#regionalKor-map-small {
+	width: 100%;
+	min-height: 500px;
+}
 
 .regionalKor-update{
 	color: darkgray;
