--- a/2weeks/src/main/webapp/resources/css/covid/covidReportList.css
+++ b/2weeks/src/main/webapp/resources/css/covid/covidReportList.css
@@ -12,6 +12,8 @@
 #reportLogo{
 	margin-left: 30px;
 	font-weight: bolder;
+	font-size: 30px;
+    margin-bottom: 25px;
 }
 #reportListCnt span{
 	color: red;
